# mathledger

./: .coverage  .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ABSTENTION_DYNAMICS_SECTION.tex  AGENTS.md  ALLBLUE_GATE_TRIGGER_V2.md  API_README.md  API_ROUTE_CANONICALITY.md  CAL_EXP_1_HYGIENE_ACTION_PLAN.md  CAL_EXP_2_HYGIENE_PREFLIGHT.md  CANON_LAW.md  CI_FIX_INSTRUCTIONS.md  CI_FIX_PATCH.diff  CLAUDE.md  COMMIT_HYGIENE_REPORT_CAL_EXP_1.md  CORTEX_NEURAL_LINK_IMPLEMENTATION.md  CRITICAL_FILES_MANIFEST.md  CURRICULUM_DRIFT_GUARD_SUMMARY.md  CURRICULUM_METHODS_SNIPPET.md  CURRICULUM_RFL_EXPERIMENTS.md  CURRICULUM_SLICE_APPENDIX_SNIPPET.md  CURRICULUM_STABILITY_IMPLEMENTATION_SUMMARY.md  D2_SIG_ADV_CONTRACT_V1_LOCK.md  DB_URL_CONSISTENCY_REPORT.md  DECOMPOSITION_AGENDA.md  DECOMPOSITION_PHASE_PLAN.json  DECOMPOSITION_PHASE_PLAN.md  Dockerfile  EFFICIENCY_REPORT.md  ENHANCED_API_README.md  FIRST_LIGHT_COMPLETE.md  FIRST_LIGHT_QUICKSTART.md  FIRST_ORGANISM_SECURITY_SUMMARY.md  FO_REGRESSION_TRIPWIRES.md  FO_RUN_SUMMARY.md  FO_SMOKE_TEST_CONTRACT.md  GLOBAL_DAG_CONSISTENCY_SPEC.md  (+184 more)
.claude/: settings.local.json
.githooks/: check_curriculum_drift.sh  policy_drift_guard.sh
.github/: CODEOWNERS  pull_request_template.md
.quarantine/: test_api_endpoints.py  test_enhanced_api.py  test_golden_run.py  test_integration.py  test_migration.py  test_new_endpoints.py  test_schemas.py  test_system_id_verification.py  test_ui_implementation.py  test_unicode10.py  test_unicode11.py  test_unicode12.py  test_unicode13.py  test_unicode14.py  test_unicode15.py  test_unicode16.py  test_unicode17.py  test_unicode18.py  test_unicode19.py  test_unicode2.py  test_unicode20.py  test_unicode21.py  test_unicode3.py  test_unicode4.py  test_unicode5.py  test_unicode6.py  test_unicode7.py  test_unicode8.py  test_unicode9.py  test_unit.py  test_v03_ui.py  test_v04_ui.py  test_v05_final.py  test_v05_fixed.py  test_v05_minimal.py  test_v05_robust.py  test_v05_simple.py  test_v05_ui.py
allblue_archive/: fleet_state.json  fleet_state_readable.json
analysis/: README.md  __init__.py  calibration.py  conjecture_engine.py  conjecture_engine_contract.py  global_health.py  governance.py  replay_summary_generator.py  u2_dynamics.py
archive/: README.md
artifacts/: pq_validator_safety_checklist.json
attestation/: CROSS_CHAIN_VERIFICATION_GUIDE.md  README.md  __init__.py  audit_ci_entry.py  audit_uplift_u2.py  audit_uplift_u2_all.py  chain_verifier.py  cross_chain_verifier.py  dual_root.py  evidence_chain.py  experiment_integration.py  manifest_verifier.py  tda_pipeline.py
backend/: depth_scheduler.py  lakefile.lean  lean_control.py  lean_control_PATCH.diff  lean_control_sandbox.py  lean_control_sandbox_plan.md  lean_interface.py  lean_mode.py  lean_mode_PATCH.diff  metrics_cartographer.py  metrics_md_report.py  metrics_reporter.py  metrics_validator.py  worker.py
basis/: __init__.py
bootstrap_output/: coverage_results.json
ci_verification/: triple_hash_summary.json  triple_hash_verification.txt
cli/: generate_risk_tile.py  ledgerctl.py
cloudflare-worker/: demo-proxy.js
config/: allblue_lanes.json  banned_calls.json  curriculum.yaml  curriculum.yaml.bak  curriculum_uplift_phase2.yaml  curriculum_uplift_phase2_hashed.yaml  drift_policy.yaml  dynamics_thresholds.json  first_organism.env  first_organism.env.template  global_axiom_registry.yaml  golden_run_policy.yaml  governance_posture.json  metric_promotion_policy.json  nightly.env  p5_synthetic.json  perf_baseline.json  pq_hash_policy.yaml  preflight_policy.yaml  replay_criticality_rules.yaml  rfl_policy_phase2.yaml  shadow_gate_registry.yaml  tda_watchdog.yaml  verifier_budget_phase2.yaml  verifier_noise_phase2.yaml
configs/: curriculum.yaml  rfl_experiment_baseline.yaml  rfl_experiment_high_abstention.yaml  rfl_experiment_rfl_default.yaml  rfl_experiment_wide_slice.json  rfl_experiment_wide_slice.yaml
curriculum/: README.md  STABILITY_ENVELOPE.md  __init__.py  cli.py  config.py  demo.py  drift_radar.py  enforcement.py  gates.py  integration.py  phase2_loader.py  shadow_mode.py  slice_drift_guard.py  stability.py  stability_envelope.py  stability_integration.py
demo/: app.py
demo_output/: epoch_root.txt  manifest.json  reasoning_root.txt  ui_root.txt  verify.py
derivation/: README.md  __init__.py  axioms.py  budget_cal_exp_integration.py  budget_invariants.py  derive_rules.py  derive_utils.py  first_organism_derivation_spec.md  first_organism_seeds.yaml  first_organism_slice.yaml  noise_guard.py  pipeline.py  structure.py  verification.py
docker/: Dockerfile.p3  Dockerfile.p4
docs/: .schema_ontology_baseline.json  ABSTENTION_PRESERVATION_ENFORCEMENT.md  ALLBLUE_ACCEPTANCE_TESTS.md  API_REFERENCE.md  ARCHITECTURE.md  ATTESTATION_AUDITOR_README.md  ATTESTATION_SPEC.md  AUDIT_TAXONOMY.md  BASIS_PROMOTION_PROTOCOL.md  BRANCH_PROTECTION.md  BUDGET_ADMISSIBILITY_SPEC.md  BUDGET_EXTENSION_SCHEME.md  BUDGET_STRESS_TEST_PLAN.md  CAPABILITY_LADDER_STATUS.md  CHAOS_HARNESS_PHASE_I_SPEC.md  CI_CONFORMANCE_POLICY.md  CI_SIGNAL_GUIDE.md  CONJECTURE_ENGINE_CONTRACT.md  CONTRIBUTING.md  CORTEX_INTEGRATION.md  CORTEX_PHASE_III_ACTIVATION_CHECKLIST.md  CORTEX_PHASE_III_HARD_GATE_SPEC.md  CORTEX_PHASE_II_SOFT_GATE_ACTIVATION_CHECKLIST.md  CORTEX_PHASE_IV_OPERATOR_GUARDRAILS.md  CORTEX_PHASE_I_ACTIVATION_CHECKLIST.md  CORTEX_PHASE_VII_INTEGRATION_SPEC.md  CORTEX_PHASE_VI_WATCHDOG.md  CORTEX_PHASE_V_OPERATOR_CONSOLE.md  CRYPTO_ROADMAP.md  CURRICULUM_DRIFT_GUARD.md  CURRICULUM_MAP_v2.md  CURRICULUM_RUNTIME_ANALYSIS.md  (+221 more)
(+3385 files in other folders)
