[project]
name = "mathledger"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "uvicorn==0.27.1",
  "fastapi==0.109.2",
  "redis==5.0.1",
  "psycopg[binary]==3.1.12",
  "pydantic==2.5.3",
  "typing-extensions==4.9.0",
  "sqlalchemy==2.0.25",
  "pyyaml==6.0.1",
  "jinja2==3.1.3",
  "httpx==0.25.1",
  "pytest==8.0.2",
  "requests==2.31.0",
  "matplotlib==3.8.2",
  "pandas==2.2.0",
  "scikit-learn==1.4.0",
  "coverage==7.4.1",
  "jcs>=0.2.1",
]

[tool.uv]  # lets `uv run` know this is a project

# Canonical packages (auto-discovered by uv in project root):
# - substrate: Core infrastructure (DAG, auth, crypto, determinism)
# - derivation: Derivation pipeline and verification
# - normalization: Canonical normalization logic
# - ledger: Ledger ingestion and UI events
# - attestation: Dual-root attestation
# - rfl: Reflexive Formal Learning
# - curriculum: Curriculum gates and metrics
# - interface: API routes and FastAPI app
#
# NOTE: Canonical imports only; backend.* is now legacy and must not appear in new code.

[dependency-groups]
dev = [
    "coverage==7.4.1",
    "pip-audit==2.7.0",
    "hypothesis>=6.100.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]

[tool.mypy]
# Mypy configuration for experiments package
# This ensures type safety for the U2 uplift experiment code
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = false  # Too strict for now, enable incrementally
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

# Experiments package strict checking
[[tool.mypy.overrides]]
module = "experiments.u2.*"
disallow_untyped_defs = true
disallow_any_unimported = false  # Allow Any from untyped imports
warn_return_any = true

[[tool.mypy.overrides]]
module = "experiments.u2_safe_eval"
disallow_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "experiments.run_uplift_u2"
disallow_untyped_defs = true
disallow_any_unimported = false

# Ignore missing imports for external packages without stubs
[[tool.mypy.overrides]]
module = [
    "rfl.*",
    "backend.*",
    "substrate.*",
    "derivation.*",
    "normalization.*",
    "attestation.*",
    "curriculum.*",
    "interface.*",
]
ignore_missing_imports = true
