[project]
name = "mathledger"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "uvicorn==0.27.1",
  "fastapi==0.109.2",
  "redis==5.0.1",
  "psycopg[binary]==3.1.12",
  "pydantic==2.5.3",
  "typing-extensions==4.9.0",
  "sqlalchemy==2.0.25",
  "pyyaml==6.0.1",
  "jinja2==3.1.3",
  "httpx==0.25.1",
  "pytest==8.0.2",
  "requests==2.31.0",
  "matplotlib==3.8.2",
  "pandas==2.2.0",
  "scikit-learn==1.4.0",
  "coverage==7.4.1",
  "jsonschema==4.21.1",
  "jcs>=0.2.1",
  "python-dotenv>=1.2.1",
  "cryptography>=46.0.3",
  "psutil>=7.1.3",
  "uncompyle6>=3.9.3",
]

[tool.uv]  # lets `uv run` know this is a project

# Canonical packages (auto-discovered by uv in project root):
# - substrate: Core infrastructure (DAG, auth, crypto, determinism)
# - derivation: Derivation pipeline and verification
# - normalization: Canonical normalization logic
# - ledger: Ledger ingestion and UI events
# - attestation: Dual-root attestation
# - rfl: Reflexive Formal Learning
# - curriculum: Curriculum gates and metrics
# - interface: API routes and FastAPI app
#
# NOTE: Canonical imports only; backend.* is now legacy and must not appear in new code.

[dependency-groups]
dev = [
    "coverage==7.4.1",
    "pip-audit==2.7.0",
    "hypothesis>=6.100.0",
]

[tool.setuptools]
py-modules = ["ledgerctl", "bridge"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "backend*",
    "experiments*",
    "interface*",
    "rfl*",
    "scripts*",
    "tools*",
    "substrate*",
    "derivation*",
    "attestation*",
    "ledger*",
    "governance*",
    "curriculum*",
    "normalization*",
    "ops*",
    "opsmicrotasks*",
    "security*",
    "analysis*",
]
exclude = [
    "tests*",
    "dist*",
    "docs*",
    "artifacts*",
    "logs*",
    "reports*",
    ".venv*",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
